Fix map popup close button z-index

--- a/app/styles/_map.scss
+++ b/app/styles/_map.scss
@@ -29,6 +29,7 @@ div.leaflet-popup-content-wrapper {
 
 a.leaflet-popup-close-button {
   text-shadow: 1px 1px 1px #000;
+  z-index: 999;
 }
 
 span.featurePopup p {
@@ -52,6 +53,7 @@ div.headerPopup {
   padding-top: 27px;
   padding-bottom: 2px;
   color: white;
+  opacity: 0.7;
   text-shadow: 1px 1px 1px #000;
 }
 
